--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
     </nav>
 
         <section class="banner">
-            <img src="#" alt="logo">
-            <img src="#" alt="imagen-animales">
-            <img src="#" alt="direccion">
+            <img src="#" alt="banner">
         </section>
 
         <section class="animales-container">
